# passger

./: .gitignore  Makefile  README.md  README_ja.md  meson.build
data/: com.github.aharotias2.passger.desktop  meson.build  passger.desktop
debian/com.github.aharotias2.PassGer_0.0.1-1_all/DEBIAN/: control  postinst
flatpak/: com.github.aharotias2.passger.yml
po/: POTFILES  com.github.aharotias2.passger.pot  it.po  ja.po  meson.build
src/: CharType.vala  PassGer.vala  PassGerConfig.vala  PassGerConfigWidget.vala  PassGerMath.vala  PassGerUtils.vala  PassGerWidget.vala
